# tavle-app

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
backend/: main.py  metadata_db.py  requirements.txt  tavle_client.py
docker/: portal.Dockerfile  tavle.Dockerfile  tavle.dev.Dockerfile
schemas/: metadata.sql
scripts/: build-tavle-sidecar.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  metadata.rs  secrets.rs  state.rs  tavle_fetch.rs  tavle_process.rs  tavle_setup.rs
src/components/: BoardFrame.tsx  GroupSidebar.tsx  SettingsModal.tsx  SetupView.tsx
src/lib/: api.ts  tauri.ts
