[package]
name = "tavle-app"
version = "0.1.0"
description = "Desktop wrapper for Tavle whiteboards"
authors = ["vdaugb"]
edition = "2021"

[lib]
name = "tavle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
keyring = "3"
thiserror = "1"
dirs = "5"
url = "2"
zip = "2"
